angular-src/src/styles.css
/* You can add global styles to this file, and also import other style files */
@import "~@angular/material/prebuilt-themes/indigo-pink.css";

/* === Start Angular material icon css === */
/* fallback */
@font-face {
  font-family: 'Material Icons';
  font-style: normal;
  font-weight: 400;
  src: url(https://fonts.gstatic.com/s/materialicons/v39/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2) format('woff2');
}

.material-icons {
  font-family: 'Material Icons';
  font-weight: normal;
  font-style: normal;
  font-size: 24px;
  line-height: 1;
  letter-spacing: normal;
  text-transform: none;
  display: inline-block;
  white-space: nowrap;
  word-wrap: normal;
  direction: ltr;
  -moz-font-feature-settings: 'liga';
  -moz-osx-font-smoothing: grayscale;
}

.bg-purple{
    background-color: purple;
}

/* css for making angular material icons grey*/
.grey-icon {
    color: grey;
}
/* === End Angular material icon css === */

.entire-form{
    padding: 10px;
    border: 2px solid #e4e4e4;
    background-color: #daf7ff;
}

.anchor-active{
    color:black;
    background-color: #619cff;
}

.form-row-container >div{
    margin-top:10px;
    padding-right:20px;
}

.div-right-align{
    display: flex;
    justify-content: flex-end;
}
.div-center-align{
    margin:auto;
}

.mat-button-toggle-checked{
    background-color:#619cff;
}

.mat-button-toggle{
    color:black;
}

.mat-tooltip{
    font-size:1em !important;
    max-width:100% !important;
}

.center-vertically{
    vertical-align: middle;
}

.table-container{
  height: 500px;
  overflow: auto;
}

.even-row{
    background-color: #efefef;
}

.tooltip-background{
    white-space: pre-line;
    background-color:grey;
}

.popover-header{
    background-color:#619cff;
    font-weight: bold;
    border-radius: 0;
}

.popover{
    width: 70%;
    border: 2px solid grey;
    max-width: none;
}

.mat-header-cell, .mat-cell{
    padding-left: 5px !important;
}

.hover-highlight:hover{
    background-color: yellow !important;
}

.main-btn{
    padding:10px;
    background: #3f51b5;
    color:white;
}

.main-btn:hover{
    color: yellow;
}

.img-in-tbl{
    margin-top: 5px;
    margin-bottom: 5px;
    max-width:75px;
    max-height:75px;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

.bg-red{
    background-color: #ff9191;
}

.bg-green{
    background-color: #99ff99;
}

.bg-yellow{
    background-color: #feff99;
}

.bg-purple{
    background-color: #b399ff;
}

